applications/hello-world/testme-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: 'testcontainers/helloworld:latest'
          ports:
            - containerPort: 8080
            - containerPort: 8081
