applications/hello-world/testme-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testme-service
  namespace: default
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: hello
  type: ClusterIP
