applications/hello-world/deployment.yaml
# applications/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-world
    namespace: default
    labels:
        app: hello-world
spec:
    replicas: 1
    selector:
        matchLabels:
            app: hello-world
    template:
        metadata:
            labels:
                app: hello-world
        spec:
            containers:
                -   name: hello-world
                    image: 'testcontainers/helloworld:latest'  # Updated image
                    ports:
                        -   containerPort: 8080  # Port 8080
                        -   containerPort: 8081  # Port 8081
---
apiVersion: v1
kind: Service
metadata:
    name: testme-service
    namespace: default
spec:
    selector:
        app: hello-world
    ports:
        -   protocol: TCP
            port: 8080
            targetPort: 8080
            name: hello
    type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: testme-subdomain-ingressroute
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        -   match: 'Host(`testme.homelab.mrida.ng`)'
            kind: Rule
            middlewares:
                -   name: compression-middleware
            services:
                -   name: testme-service
                    port: 8080
    tls:
        certResolver: letsencrypt
