applications/hello-world/testme-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: testme-subdomain-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testme.homelab.mrida.ng`)
      kind: Rule
      middlewares:
        - name: compression-middleware
      services:
        - name: testme-service
          port: 8080
  tls:
    certResolver: letsencrypt
